<resources>
    <string name="app_name">AzubiLog</string>
    <string name="app_version" translatable="false">Alpha 0.4.1</string>
    <string name="action_settings">Einstellungen</string>
    <string name="add">Hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="add_installer">Geselle hinzufügen</string>
    <string name="date">Datum</string>
    <string name="client">Kunde</string>
    <string name="work_description">Arbeitsbeschreibung</string>
    <string name="duration">Dauer</string>
    <string name="save">Speichern</string>
    <string name="please_enter_input">Bitte alles ausfüllen.</string>
    <string name="installer">Geselle</string>
    <string name="only_present">Du kannst kein Datum in der Zukunft auswählen.</string>
    <string name="tradeschool">Berufsschule</string>
    <string name="name">Name</string>
    <string name="firstName">Vorname</string>
    <string name="timeDivider" translatable="false">%1$d : %2$s</string>
    <string name="no_entries">Keine Einträge für diesen Tag.</string>
    <string name="no_entries_yet">Du hast noch keine Arbeiten eingetragen!</string>
    <string name="over_twelve">Mehr als 12 Stunden gearbeitet? :D Wow du bist aber fleißig!</string>
    <string name="over_twentyfour">Oke, mehr als 24 kannst du gar nicht gearbeitet haben ;)</string>
    <string name="really_delete">Wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="remind_daily">Täglich erinnern</string>
    <string name="default_reminder_time">12:00</string>
    <string name="personal_information">Persönliche Daten</string>
    <string name="reminder">Erinnerung</string>
    <string name="database">Datenbank</string>
    <string name="export">Exportieren</string>
    <string name="import_">Importieren</string>
    <string name="delete">Löschen</string>
    <string name="generate_summary">Bericht erstellen</string>
    <string name="loading_please_wait">Laden. Bitte warten…</string>
    <string name="comment_too_long">Kommentar zu lang</string>
    <string name="comments">Bemerkungen</string>
    <string name="year">Jahr</string>
    <string name="page">Seite</string>
    <string name="all_installers_will_be_deleted">Alle Arbeitseinträge mit diesem Gesellen werden auch gelöscht!</string>
    <string name="day_scroll_limit">Tage die mehr als %d Tage in der Zukunft oder Vergangenheit liegen können nicht ausgewählt werden.</string>
    <plurals name="xHours">
        <item quantity="one">%s Stunde</item>
        <item quantity="other">%s Stunden</item>
    </plurals>
    <string name="zero_hours">0:00 Stunden</string>
    <string name="really_import">Wirklich importieren?</string>
    <string name="import_explanation">Wenn du importierst werden die alten Einträge gelöscht!</string>
    <string name="select_file">Datei auswählen</string>
    <string name="take_photo">Bild aufnehmen</string>
    <string name="choose_from_library">Von Galerie auswählen</string>
    <string name="add_photo">Photo hinzufügen!</string>
    <string name="more_than_five">Mehr als 5 Einträge pro Tag können nicht gedruckt werden.</string>
    <string name="delete_everything">Hiermit werden alle Einträge, Kunden und Gesellen gelöscht!</string>
    <string name="clients">Kunden</string>
    <string name="no_clients">Keine Kunden eingetragen.</string>
    <string name="rename">Umbenennen</string>
    <string name="delete_entries_for_client">Alle Einträge für diesen Kunden werden gelöscht.</string>
    <string name="merge">Verschmelzen?</string>
    <string name="really_merge">Es gibt schon einen Kunden mit dem Namen.\nWillst du sie verschmelzen?</string>
    <string name="call">Anrufen</string>
</resources>
