<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<data>
        <variable name="entry" type="de.struckmeierfilesen.ds.wochenbericht.Entry"/>
    </data>-->
    <RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <de.struckmeierfliesen.ds.wochenbericht.SelectAgainSpinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:textSize="@dimen/medium_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/durationSpinner"
        android:layout_toStartOf="@+id/durationSpinner"
        android:layout_alignBottom="@+id/durationSpinner"
        android:minHeight="48dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:textSize="@dimen/medium_text"
        android:id="@+id/durationSpinner"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/duration"
        android:layout_alignLeft="@+id/editDate"
        android:layout_alignStart="@+id/editDate"
        android:enabled="false"
        android:minHeight="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/editWork"
        android:hint="@string/work_description"
        android:minLines="3"
        android:layout_below="@+id/editClient"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/medium_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDate"
        android:textSize="@dimen/medium_text"
        android:layout_below="@+id/durationSpinner"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_toRightOf="@+id/editClient"
        android:layout_toEndOf="@+id/editClient"
        android:layout_alignBottom="@+id/editClient"
        android:gravity="center"
        android:hint="@string/date"
        android:clickable="true"
        android:inputType="date"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="@dimen/medium_text"
        android:id="@+id/editClient"
        android:hint="@string/client"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:layout_below="@+id/editWork"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelButton"
        android:layout_alignTop="@+id/button"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button"
        android:visibility="gone" />

    </RelativeLayout>
</layout>
